single product page

--- a/public/niko/custom.css
+++ b/public/niko/custom.css
@@ -52,4 +52,17 @@
                 line-height: 1.2;
                 font-family: "Nexa Text W05 Extra Light";
             }
+            .btn-orange{
+                color: var(--default-color);
+                border: 2px solid var(--accent-color);
+                background: transparent;
+                padding: 14px 60px;
+                transition: 0.4s;
+                border-radius: 50px;
+                
+            }
+            .btn-orange:hover{
+                background: var(--accent-color);
+                color: #fff;
+            }
         
