--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,25 +1,9 @@
-.main_cart {
-    background: linear-gradient(63deg, rgba(255, 136, 62, 1) 0%,
-        rgba(169, 90, 41, 1) 3%,
-        rgba(133, 71, 32, 1) 5%,
-        rgba(96, 51, 23, 1) 11%,
-        rgba(41, 22, 10, 1) 17%, 
-        rgba(0, 0, 0, 1) 23%, 
-        rgba(20, 5, 3, 1) 64%, 
-        rgba(30, 8, 5, 1) 81%, 
-        rgba(50, 14, 8, 1) 85%, 
-        rgba(81, 22, 12, 1) 91%, 
-        rgba(128, 34, 19, 1) 96%, 
-        rgba(186, 50, 28, 1) 100%);
-    transition: background 0.5s ease;
-}
-
-.cart_section{
+.cart_section {
     /* background: url(../images/about-bg.jpg) !important;
     background-size: cover;
     position: relative; */
     padding: 80px 0;
-    background: linear-gradient(63deg, rgba(255, 136, 62, 1) 0%,
+    /* background: linear-gradient(63deg, rgba(255, 136, 62, 1) 0%,
         rgba(169, 90, 41, 1) 3%,
         rgba(133, 71, 32, 1) 5%,
         rgba(96, 51, 23, 1) 11%,
@@ -31,5 +15,162 @@
         rgba(81, 22, 12, 1) 91%, 
         rgba(128, 34, 19, 1) 96%, 
         rgba(186, 50, 28, 1) 100%);
-    transition: background 0.5s ease;
+    transition: background 0.5s ease; */
+    background-color: var(--background-color);
+
+}
+
+.cart_table {
+    width: 100%;
+    height: auto;
+    border-left: 1px solid #cda45e;
+    border-bottom: 1px solid #cda45e;
+    border-right: 1px solid #cda45e;
+}
+
+.table_head {
+    height: 48px;
+    background-color: #cda45e;
+}
+
+.table_body tr {
+    border-bottom: 1px solid #cda45e;
+}
+
+.cart-product-remove {
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.cart-product-image img {
+    max-width: 100px;
+    height: 70px;
+    padding: 10px 0px;
+    border-radius: 10px;
+}
+
+.cart-product-info h4 a {
+    font-size: 1.0rem;
+}
+
+.cart-plus-minus {
+    border: 2px solid #cda45e;
+    height: 42px;
+    width: 140px;
+    text-align: center;
+}
+
+.qtybutton {
+    height: 100%;
+    width: 30%;
+}
+
+.dec.qtybutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
+    border-right: 2px solid #cda45e;
+    color: var(--heading-color);
+    cursor: pointer;
+}
+
+.inc.qtybutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    border-left: 2px solid #cda45e;
+    color: var(--heading-color);
+    cursor: pointer;
+}
+
+input.cart-plus-minus-box {
+    background: none;
+    color: white;
+    border: none !important;
+    height: 100%;
+    margin-bottom: 0;
+    padding: 0;
+    text-align: center;
+    width: 40%;
+    font-weight: 700;
+}
+.table_body .cart-product-remove {
+    color: var(--heading-color);
+}
+.table_body .cart-product-price{
+    color: var(--heading-color);
+}
+/* .table_body .cart-product-info h4 a{
+    color: var(--heading-color) !important;
+} */
+.table_body .cart-product-subtotal{
+    color: var(--heading-color);
+}
+
+.cart-plus-minus-box:focus {
+    outline: none;
+}
+.content{
+    background-color:
+    color-mix(in srgb, var(--background-color) 90%, white 5%);
+}
+.cart_total_section{
+    height: 48px;
+    background-color: #cda45e;
+    
+}
+
+
+
+.extra_section{
+    background-color:
+    color-mix(in srgb, var(--background-color) 90%, white 5%);
+}
+.subcart2 {
+    padding: 5px;
+    border: 1px solid #cda45e;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.seccolr {
+    font-size: 16px;
+    color: var(--accent-color);
+}
+
+.pricetag {
+    display: flex;
+    flex-direction: row;
+}
+
+.sidept {
+    background-color: transparent;
+    height: 100%;
+}
+
+.pbtn {
+    font-size: 20px;
+    background-color: transparent;
+    padding: 5px;
+    border-radius: 0px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.centerinput {
+    width: 50px;
+    color: #fff;
+}
+
+.centerinput input {
+    width: 50px;
+    height: 100%;
+    padding-left: 20px;
+    border: none;
+    background-color: transparent;
+    color: #fff;
 }
