--- a/public/niko/custom.css
+++ b/public/niko/custom.css
@@ -91,7 +91,7 @@
     color: #fff;
     border: 1px solid var(--accent-color);
 }
-.custom-cart {
+a .custom-cart {
     background-color: var(--accent-color); 
     color: #fff;
     border-radius: 50%; 
@@ -103,4 +103,25 @@
 .location-button{
     color: var(--accent-color);
     background: transparent;
+}
+.capitalize-first {
+    text-transform: lowercase;
+}
+
+.capitalize-first:first-letter {
+    text-transform: uppercase;
+}
+
+.user-logout-button {
+  color: var(--default-color);
+  border: 2px solid var(--accent-color);
+  background: transparent;
+  padding: 5px 25px;
+  transition: 0.4s;
+  border-radius: 50px;
+  margin-left: 10px;
+}
+
+.user-logout-button:hover {
+  background: var(--accent-color);
 }
