--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -225,20 +225,88 @@ input.cart-plus-minus-box {
 .update_btn {
     width: 100% !important;
     height: 100% !important;
-    background-color:var(--accent-color);
+    background-color: var(--accent-color);
     border: 0 !important;
     outline: none;
     color: var(--heading-color);
 }
+
 @media (min-width: 344px) and (max-width: 882px) {
     .cart_quantity {
         width: 100%;
         height: 36px;
     }
 }
+
 @media (min-width: 768px) and (max-width: 1024px) {
     .cart_quantity {
         width: 24%;
         height: 36px;
     }
+}
+
+#card_extra {
+    width: 33% !important;
+    height: 100% !important;
+}
+@media (min-width: 344px) and (max-width: 882px) {
+    #card_extra {
+        width: 55% !important;
+        height: 100% !important;
+    }
+}
+@media (min-width: 430px) and (max-width: 932px) {
+    #card_extra {
+        width: 55% !important;
+        height: 100% !important;
+    }
+}
+
+#myTab {
+    border-bottom: 2px solid var(--accent-color) !important;
+    color: var(--accent-color) !important;
+}
+
+.nav-item {
+    margin-right: 2px !important;
+    margin-bottom: 1px !important;
+}
+
+#accompagnements-tab:hover {
+    border-radius: 0px !important;
+    background-color: var(--accent-color);
+    color: var(--heading-color) !important;
+    border: 0;
+    outline: none !important;
+}
+
+#deserts-tab:hover {
+    border-radius: 0px !important;
+    background-color: var(--accent-color);
+    color: var(--heading-color) !important;
+    border: 0;
+    outline: none !important;
+}
+
+#boissons-tab:hover {
+    border-radius: 0px !important;
+    background-color: var(--accent-color);
+    color: var(--heading-color) !important;
+    border: 0;
+    outline: none !important;
+}
+
+.nav-tabs .nav-link.active {
+    background-color: var(--accent-color) !important;
+    color: var(--heading-color) !important;
+    border-color: var(--sec-color);
+    border-radius: 0 !important;
+    border: 0 !important;
+    outline: none !important;
+}
+
+#myTabContent {
+    border-right: 1px solid var(--accent-color) !important;
+    border-bottom: 1px solid var(--accent-color) !important;
+    border-left: 1px solid var(--accent-color) !important;
 }
