--- a/public/niko/custom.css
+++ b/public/niko/custom.css
@@ -91,19 +91,22 @@
     color: #fff;
     border: 1px solid var(--accent-color);
 }
+
 a .custom-cart {
-    background-color: var(--accent-color); 
+    background-color: var(--accent-color);
     color: #fff;
-    border-radius: 50%; 
+    border-radius: 50%;
     padding: 4px 8px;
     position: relative;
     top: -13px;
     font-size: 13px;
 }
-.location-button{
+
+.location-button {
     color: var(--accent-color);
     background: transparent;
 }
+
 .capitalize-first {
     text-transform: lowercase;
 }
@@ -113,19 +116,28 @@ a .custom-cart {
 }
 
 .user-logout-button {
-  color: var(--default-color);
-  border: 2px solid var(--accent-color);
-  background: transparent;
-  padding: 5px 25px;
-  transition: 0.4s;
-  border-radius: 50px;
-  margin-left: 10px;
+    color: var(--default-color);
+    border: 2px solid var(--accent-color);
+    background: transparent;
+    padding: 5px 25px;
+    transition: 0.4s;
+    border-radius: 50px;
+    margin-left: 10px;
 }
 
 .user-logout-button:hover {
-  background: var(--accent-color);
+    background: var(--accent-color);
 }
+
 input[type='number']::placeholder {
     color: var(--accent-color);
     opacity: 0.5 !important;
+    
+}
+
+.body-colour {
+    background: linear-gradient(63deg, rgba(255, 136, 62, 1) 0%, rgba(169, 90, 41, 1) 3%, rgba(133, 71, 32, 1) 5%, rgba(96, 51, 23, 1) 11%, rgba(41, 22, 10, 1) 17%, rgba(0, 0, 0, 1) 23%, rgba(20, 5, 3, 1) 64%, rgba(30, 8, 5, 1) 81%, rgba(50, 14, 8, 1) 85%, rgba(81, 22, 12, 1) 91%, rgba(128, 34, 19, 1) 96%, rgba(186, 50, 28, 1) 100%) !important;
+}
+.bg-transparent{
+    background: transparent;
 }
