--- a/public/niko/custom.css
+++ b/public/niko/custom.css
@@ -65,13 +65,23 @@
     padding: 14px 60px;
     transition: 0.4s;
     border-radius: 50px;
-
 }
-
 .btn-orange:hover {
     background: var(--accent-color);
     color: #fff;
 }
+.btn-invoice{
+    color: var(--default-color);
+    border: 2px solid var(--accent-color);
+    background: transparent;
+    transition: 0.4s;
+   
+}
+.btn-invoice:hover {
+    background: var(--accent-color);
+    color: #fff;
+}
+
 
 .btn-outline-orange {
     color: var(--accent-color);
