--- a/public/css/style.css
+++ b/public/css/style.css
@@ -898,7 +898,7 @@ input[type="email"],
 input[type="password"],
 input[type="submit"],
 textarea {
-  background-color: var(--white);
+  background-color: transparent;
   border: 2px solid;
   border-color: var(--border-color-9);
   height: 65px;
@@ -923,7 +923,7 @@ textarea::-webkit-input-placeholder {
   font-size: 14px;
 }
 
-input[type="text"]:focus,
+/* input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus,
 textarea:focus {
@@ -939,7 +939,7 @@ textarea {
   resize: vertical;
   padding: 15px 20px;
   min-height: 150px;
-}
+} */
 
 button {
   outline: none;
@@ -15710,7 +15710,7 @@ input.cart-plus-minus-box {
 .ltn__myaccount-tab-content-inner>p {
   padding: 20px;
   background-color: #ff883e;
-    color: var(--section-bg-1);
+  color: var(--section-bg-1);
 }
 
 /* ----------------------------------------------------
@@ -16808,6 +16808,20 @@ input.cart-plus-minus-box {
   [type="submit"].btn {
     padding: 12px 30px;
   }
+}
+
+
+
+
+.order tr td {
+  color: var(--section-bg-1);
+}
+
+.table>:not(caption)>*>* {
+  padding: 1rem .5rem !important;
+  background-color: var(--bs-table-bg);
+  border-bottom-width: 1px;
+  box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
 }
 
 /* ----------------------------------------------------
