--- a/public/css/style.css
+++ b/public/css/style.css
@@ -387,7 +387,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  color: var(--ltn__heading-color);
+  color: #fff;
   clear: both;
   font-family: var(--ltn__heading-font);
   font-weight: 700;
@@ -396,7 +396,7 @@ h6,
 }
 
 p {
-  color: var(--ltn__paragraph-color);
+  color: #fff;
   margin-bottom: 1.5em;
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
@@ -423,7 +423,7 @@ a:active {
 }
 
 a:hover {
-  color: var(--ltn__secondary-color);
+  color: #ff883e;
 }
 
 button,
