--- a/public/niko/assets/css/main.css
+++ b/public/niko/assets/css/main.css
@@ -11,10 +11,12 @@
 # Help: https://bootstrapmade.com/color-system/
 --------------------------------------------------------------*/
 /* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
   --default-font: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Playfair Display", sans-serif;
   --nav-font: "Poppins", sans-serif;
+
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
@@ -76,7 +78,7 @@
 body {
   color: var(--default-color);
   background-color: var(--background-color);
-  font-family: var(--default-font);
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
@@ -97,7 +99,7 @@ h4,
 h5,
 h6 {
   color: var(--heading-color);
-  font-family: var(--heading-font);
+  font-family: "Montserrat", sans-serif;
 }
 
 /* PHP Email Form Messages
@@ -389,7 +391,7 @@ h6 {
     color: var(--nav-color);
     padding: 18px 15px;
     font-size: 14px;
-    font-family: var(--nav-font);
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     display: flex;
     align-items: center;
@@ -506,7 +508,7 @@ h6 {
   .navmenu a:focus {
     color: var(--nav-dropdown-color);
     padding: 10px 20px;
-    font-family: var(--nav-font);
+    font-family: "Montserrat", sans-serif;
     font-size: 17px;
     font-weight: 500;
     display: flex;
@@ -628,13 +630,13 @@ h6 {
   font-size: 26px;
   font-weight: 700;
   letter-spacing: 1px;
-  font-family: var(--heading-font);
+  font-family: "Montserrat", sans-serif;
   color: var(--heading-color);
 }
 
 .footer .footer-about p {
   font-size: 14px;
-  font-family: var(--heading-font);
+  font-family: "Montserrat", sans-serif;
 }
 
 .footer .social-links a {
@@ -941,7 +943,7 @@ section,
   margin: 0;
   font-size: 36px;
   font-weight: 600;
-  font-family: var(--heading-font);
+  font-family: "Montserrat", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -1170,7 +1172,7 @@ section,
   font-weight: 500;
   line-height: 1;
   transition: all ease-in-out 0.3s;
-  font-family: var(--heading-font);
+  font-family: "Montserrat", sans-serif;
 }
 
 .menu .menu-filters li:hover,
@@ -1240,7 +1242,7 @@ section,
   margin-left: 95px;
   font-style: italic;
   font-size: 14px;
-  font-family: var(--nav-font);
+  font-family: "Montserrat", sans-serif;
   color: color-mix(in srgb, var(--default-color), transparent 50%);
 }
 
@@ -1350,7 +1352,7 @@ section,
 
 .events .event-item .price {
   font-size: 26px;
-  font-family: var(--default-font);
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   margin-bottom: 15px;
 }
