--- a/public/css/style.css
+++ b/public/css/style.css
@@ -333,7 +333,7 @@ font-family: 'Roboto', sans-serif;
   --background-color: #0c0b09;
   --default-color: rgba(255, 255, 255, 0.7);
   --heading-color: #ffffff;
-  --accent-color: #ff883e;
+  --accent-color: #ba321c;
   --secondary-accent-color: #E5D5BF;
   --surface-color: #29261f;
   --contrast-color: #0c0b09;
@@ -423,7 +423,7 @@ a:active {
 }
 
 a:hover {
-  color: #ff883e;
+  color: #ba321c;
 }
 
 button,
@@ -893,6 +893,7 @@ textarea {
   border-color:
     color-mix(in srgb, #ba321c, transparent 70%) !important;
 }
+
 /* .input[type="email"]{
   background-color: ;
 } */
@@ -15664,7 +15665,7 @@ input.cart-plus-minus-box {
 }
 
 .ltn__tab-menu-list .nav a {
-  color: #ff883e;
+  color: #ba321c;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -16802,6 +16803,7 @@ input.cart-plus-minus-box {
   color: var(--section-bg-1);
   background: transparent;
 }
+
 .order tr th {
   color: var(--section-bg-1);
   background: #ba321c !important;
@@ -16814,30 +16816,34 @@ input.cart-plus-minus-box {
   box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
 }
 
-#update{
+#update {
   background: transparent;
-  color: #ff883e;
+  color: #ba321c;
   border: 1px solid #ba321c;
   padding: 6px 20px;
   font-size: 16px;
   font-weight: 700;
 }
-#update:hover{
+
+#update:hover {
   background-color: #ba321c;
   color: var(--section-bg-1);
 }
-#update_pass{
+
+#update_pass {
   background: transparent;
-  color: #ff883e;
+  color: #ba321c;
   border: 1px solid #ba321c;
   padding: 6px 20px;
   font-size: 16px;
   font-weight: 700;
 }
-#update_pass:hover{
+
+#update_pass:hover {
   background-color: #ba321c;
   color: var(--section-bg-1);
 }
+
 /* ----------------------------------------------------
     END
 ---------------------------------------------------- */
