--- a/public/niko/assets/css/main.css
+++ b/public/niko/assets/css/main.css
@@ -25,7 +25,7 @@
   /* Background color for the entire website, including individual sections */
   --default-color: rgba(255, 255, 255, 0.7);
   /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #ffffff;
+  --heading-color: #E5D5BF;
   /* Color for headings, subheadings and title throughout the website */
   --accent-color: #ba321c;
   --secondary-accent-color: #E5D5BF;
