--- a/public/niko/assets/css/main.css
+++ b/public/niko/assets/css/main.css
@@ -954,23 +954,12 @@ section,
   width: 100%;
   min-height: 100vh;
   position: relative;
-  padding: 80px 0;
+  padding: 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--default-color);
 }
-
-.hero img {
-  position: absolute;
-  inset: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: 1;
-}
-
 .hero:before {
   content: "";
   background: color-mix(in srgb, var(--background-color), transparent 50%);
@@ -980,7 +969,7 @@ section,
 }
 
 .hero .container {
-  position: relative;
+  position: absolute;
   z-index: 3;
 }
 
