--- a/public/niko/assets/css/main.css
+++ b/public/niko/assets/css/main.css
@@ -952,7 +952,7 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   position: relative;
   padding: 0 0;
   display: flex;
