--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -23,9 +23,9 @@
 .cart_table {
     width: 100%;
     height: auto;
-    border-left: 0px !important;
-    border-bottom: 0px !important;
-    border-right: 0px !important;
+    border-left: none !important;
+    border-bottom: none !important;
+    border-right: none !important;
 }
 
 .table_head {
@@ -34,7 +34,7 @@
 }
 
 .table_body tr {
-    border-bottom:0px !important;
+    border-bottom:none !important;
     height: 72px;
 }
 
