--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,6 +28,7 @@
 
     .Mainslide {
         margin-top: 40px;
+        height: auto !important;
     }
 
     .homeSlide {
@@ -49,6 +50,7 @@
 
     .Mainslide {
         margin-top: 40px;
+        height: auto !important;
     }
 
     .homeSlide {
@@ -85,6 +87,7 @@
 
     .Mainslide {
         margin-top: 40px;
+        height: auto !important;
     }
 
     .homeSlide {
@@ -122,6 +125,7 @@
 
     .Mainslide {
         margin-top: 40px;
+        height: auto !important;
     }
 
     .homeSlide {
@@ -148,5 +152,29 @@
     .btn-orange-normal:hover {
         color: var(--default-color) !important;
         background-color: var(--accent-color) !important;
+    }
+}
+
+@media (min-width: 360px) and (max-width: 740px) {
+    .btn-orange-normal {
+       display: none;
+    }
+}
+@media (min-width: 344px) and (max-width: 882px) {
+    .btn-orange-normal {
+       display: none;
+    }
+}
+@media (min-width: 853px) and (max-width: 1280px) {
+    .btn-orange-normal {
+        font-size: 16px !important;
+        padding: 8px 14px !important;
+    }
+}
+@media (min-width: 540px) and (max-width: 720px) {
+    .btn-orange-normal {
+        font-size: 16px !important;
+        padding: 8px 14px !important;
+        display:inline-block !important;
     }
 }
