--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -106,7 +106,8 @@ a:hover {
     background: #b2a09d !important;
     margin: 4px 10px;
 }
-.section-title h2{
+
+.section-title h2 {
     line-height: 25px !important;
 }
 
@@ -218,15 +219,70 @@ a:hover {
 }
 
 .pac-container {
-    width: 355px !important;
+    width: 100%;
     position: absolute;
-    left: 535px !important;
-    /* top: 688px !important; */
+    left: 34%;
+    top: 68%;
     background-color: black !important;
     color: #f38a00 !important;
     border: none !important;
     z-index: 1000000 !important;
 }
+
+/* @media (min-width: 375px) and (max-width: 667px) {
+    .pac-container {
+        left: 10px !important;
+        top: 609px !important;
+    }
+} */
+
+@media (min-width: 360px) and (max-width: 740px) {
+    .modal-content {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 100% !important;
+        max-width: 359px !important;
+        color: var(--bs-modal-color);
+        pointer-events: auto;
+        background-color: var(--bs-modal-bg);
+        background-clip: padding-box;
+        border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
+        border-radius: var(--bs-modal-border-radius);
+        outline: 0;
+    }
+
+    .pac-container {
+        width: 393px !important;
+        position: absolute !important;
+        left: 10px !important;
+        top: 650px !important;
+    }
+}
+
+/* @media (min-width: 390px) and (max-width: 844px) {
+    .pac-container {
+        width: 369px !important;
+        position: absolute !important;
+        top: 697px !important;
+    }
+}
+
+@media (min-width: 430px) and (max-width: 932px) {
+    .pac-container {
+        width: 410px !important;
+        position: absolute !important;
+        top: 742px !important;
+    }
+} */
+
+/* @media (min-width: 412px) and (max-width: 915px) {
+    .pac-container {
+        width: 393px !important;
+        position: absolute !important;
+        top: 632px !important;
+    }
+} */
 
 .pac-item {
     padding: 8px;
