--- a/public/css/ltr_rtr.css
+++ b/public/css/ltr_rtr.css
@@ -18,3 +18,11 @@
 #loction_rtr_h2{
     direction: rtl !important;
 }
+
+
+#contact{
+    direction: rtl;
+}
+.contact_mail_icon{
+    margin-right: 20px;
+}
