--- a/public/css/ltr_rtr.css
+++ b/public/css/ltr_rtr.css
@@ -29,3 +29,15 @@
 .contact_mail_icon{
     margin-right: 20px;
 }
+#about{
+    direction: rtl;
+}
+#liton__wishlist{
+    direction: rtl;
+}
+
+
+
+#footer{
+    direction: rtl;
+}
