--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -257,6 +257,14 @@ input.cart-plus-minus-box {
         padding: 10px 0px;
         border-radius: 10px;
     }
+
+    #card_extra {
+        width: 55% !important;
+        height: 100% !important;
+    }
+    .mobilFontSize{
+        font-size: 12px !important;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -277,18 +285,6 @@ input.cart-plus-minus-box {
     height: 100% !important;
 }
 
-@media (min-width: 344px) and (max-width: 882px) {
-    #card_extra {
-        width: 55% !important;
-        height: 100% !important;
-    }
-    .cart-product-image img {
-        max-width: 100px;
-        height: 87px;
-        padding: 10px 0px;
-        border-radius: 10px;
-    }
-}
 
 @media (min-width: 430px) and (max-width: 932px) {
     #card_extra {
@@ -300,6 +296,11 @@ input.cart-plus-minus-box {
         height: 87px;
         padding: 10px 0px;
         border-radius: 10px;
+    }
+}
+@media (min-width: 375px) and (max-width: 667px) {
+    .cart-product-info h4 a {
+        font-size: 12px !important;
     }
 }
 
